2003-05-27  Ben Maurer <bmaurer@users.sourceforge.net>
	* XslTransform.cs: unsafe classes need unsafe!

2003-05-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslTransform.cs: fixed bug #42739.

2003-05-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslTransform.cs: fixed bug #42747.

2003-05-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslTransform.cs: flush the writers when done. Fixes bug #42040.

2003-03-10  Alan Tam <Tam@SiuLung.com>

	* XslTransform.cs: Fixed a bug when no args is passed

2003-03-10  Alan Tam <Tam@SiuLung.com>

	* XslTransform.cs: Implemented boolean, number and string parameters.
	(Node Set and Node Iterator parameters and Extension Objects are left.)
	* XsltAttributeList.cs: Loosened access modifiers.

2003-02-20  Nick Drochak <ndrochak@gol.com>

	* XslTransform.cs: Remove confusing and unused parameter.

2003-01-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslTransform.cs: don't free the xml document used for the style sheet.
	xmlFreeStylesheet already does it. Correctly close the element tag for
	elements that don't have children. Added a couple of checks more.

2003-01-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslTransform.cs: fixed a couple of Transform overloads and changed the
	library name in DllImport to make it work on windows too.

2003-01-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslTransform.cs: implemented all Load and Transform methods. It uses
	libxml2 and libxslt. No more temp files. It's slow and memory consuming,
	but, well, that's XSLT... ;-). Idea from Zdravko Tashev.

	Now the Xsl web control works.

2002-09-23  Duncan Mak  <duncan@ximian.com>

	* XslTransform.cs (Laod): Implemented the simple version that
	takes one XPathNavigator as argument.
	(Save): New private method for recreating the XML in text from a
	XPathNavigator
	(WriteCurrentNode):
	(WriteTree): private methods for generating the text XML from the
	XPathNavigator tree.
