@@ -1,4 +1,10 @@
+2003-05-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* XslTransform.cs: fixed NullReferenceExceptions after the last
+	change (which, btw, should have included a ChangeLog entry).
+
 2003-05-27  Ben Maurer <bmaurer@users.sourceforge.net>
+
 	* XslTransform.cs: unsafe classes need unsafe!
 
 2003-05-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>
